--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18934,6 +18934,12 @@ a.fc-more:hover {
   .fc-left {
     margin-bottom: 1rem;
   }
+
+  button#logout {
+    color: #212529 !important;
+    background-color: #f8f9fa !important;
+    border-color: #f8f9fa !important;
+  }
 }
 
 @media (max-width: 991.98px) {
